Fix broken reveal & archive in "quick" mode
Don't store room settings and state separately.

--- a/views/client/controls.jade
+++ b/views/client/controls.jade
@@ -1,5 +1,5 @@
 | &nbsp;&middot;
-if state.revealed
+if state.reveal || state.revealed
   span.muted revealed
   | &nbsp;&middot;
   a#archive(href='#') archive
